--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@ name: Eunice Yeh
 bio: Carolina girl doing biostats at Harvard
 
 # twitter summary info
-# description: A blog about technology and stuff related
+description: The intersection of public health data and statistics.
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: 'assets/images/profile.jpg'
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+# resume: true
+# resume-external: true
+# resume-url: https://google.com/?q=my+resume
 
 url: http://euniceyeh.github.io
 # your url: http://USERNAME.github.io
@@ -22,7 +22,7 @@ url: http://euniceyeh.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-analytics-google: 'UA-120209639-1'
+# analytics-google: 'UA-120209639-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
