--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # main text of home
 name: Eunice Yeh
-bio: Carolina girl doing biostats at Harvard
+bio: Statistical analyst, programmer, grad student, avid sleeper
+last_updated: June 2, 2018
 
 # twitter summary info
-description: Application of statistics on public health data.
+description: Carolina girl doing biostats at Harvard
 
 # if it's an external image, update below for true
 # better with square images
@@ -17,14 +18,14 @@ picture: 'assets/images/profile.jpg'
 # resume-url: https://google.com/?q=my+resume
 
 url: "https://euniceyeh.github.io"
-baseurl: ""
+baseurl: "/indigo"
 title: "Eunice Yeh"
 keywords: Eunice, Yeh, Biostatistics, UNC, Harvard, Boston
 
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-120209639-1'
+analytics-google: 'UA-120209639-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
@@ -36,15 +37,17 @@ permalink: /:title/
 #   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
+email: eyeh@sdac.harvard.edu
+scholar: 5fgsS-4AAAAJ
+github: euniceyeh
+linkedin: euniceyeh
+instagram: euniceyay
 facebook: euniceyay
 # twitter: mytwitter
 # google: mygoogle
-instagram: euniceyay
 # pinterest: mypinterest
-linkedin: euniceyeh
 # youtube: myyoutube
 # spotify: myspotify
-github: euniceyeh
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
@@ -52,7 +55,6 @@ github: euniceyeh
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: eyeh@sdac.harvard.edu
 
 authors:
     euniceyeh:
@@ -71,12 +73,12 @@ width: normal
 # paginate: 5
 # paginate_path: "blog/:num/"
 
-# if you don't need projects, comment the *projects* configs below
-projects: true
-
 # if you don't need "about" or "blog", comment them out below
 about: true
 # blog: true
+
+# if you don't need projects, comment the *projects* configs below
+projects: true
 
 # do you want to show the "read time" of the posts?
 # read-time: true
