--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ picture: 'assets/images/profile.jpg'
 # resume-external: true
 # resume-url: https://google.com/?q=my+resume
 
-url: "https://euniceyeh.github.io"
-baseurl: "/indigo"
+url: "https://euniceyeh.github.io/indigo"
+baseurl: ""
 title: "Eunice Yeh"
 keywords: Eunice, Yeh, Biostatistics, UNC, Harvard, Boston
 
