--- a/_config.yml
+++ b/_config.yml
@@ -59,10 +59,10 @@ facebook: euniceyay
 authors:
     euniceyeh:
         name: Eunice Yeh
-        bio: Carolina girl doing biostats at Harvard
+        bio: Stat analyst and grad student at Harvard
         external-image: false
         picture: assets/images/profile.jpg
-        instagram: euniceyay
+        twitter: euniceyeh_
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
@@ -90,7 +90,7 @@ show-tags: true
 related: true
 
 # Display links for next and previous posts for the specified categories
-post-advance-links: [blog]
+post-advance-links: [blog, projects]
 
 # show author block at the end of a post ?
 show-author: true
