--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ picture: 'assets/images/profile.jpg'
 # resume-external: true
 # resume-url: https://google.com/?q=my+resume
 
-url: "https://euniceyeh.github.io/"
+url: "https://euniceyeh.github.io"
 baseurl: ""
 title: "Eunice Yeh"
 keywords: Eunice, Yeh, Biostatistics, UNC, Harvard, Boston
