--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Eunice Yeh
-bio: Statistical analyst/ programmer, grad student, nap enthusiast
+bio: Stat analyst, programmer, grad student, nap enthusiast
 last_updated: '`r format(Sys.time(), "%d %B, %Y")`'
 
 # twitter summary info
