--- a/_config.yml
+++ b/_config.yml
@@ -1,90 +1,82 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Xingyue Huo
+bio: "We are all star stuff"
 
 # twitter summary info
-description: A blog about technology and stuff related
+#description: Carolina girl doing biostats at Harvard
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: 'assets/images/profile1.jpg'
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+# resume: true
+# resume-external: true
+# resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
-# your url: https://USERNAME.github.io
+#url: "https://XingyueH.github.io"
+#baseurl: ""
+#title: "Xingyue Huo"
 
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+#analytics-google: 'UA-120209639-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
 # analytics-piwik-id: 1
 
 # if you don't want comments in your posts, leave categories empty
-disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+# disqus:
+#   shortname: mydisqus # enter this from your disqus account
+#   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-# instagram: myinstagram
+email: huoxingyue14@gmail.com
+#scholar: 
+#github: 
+linkedin: xingyue-huo
+#instagram: 
+#facebook: 
+# twitter: mytwitter
+# google: mygoogle
 # pinterest: mypinterest
-# linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
-# gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
 
-authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
-    external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+#authors:
+#    XingyueH:
+#        name: Xingyue Huo
+#        bio: 
+#        external-image: false
+#        picture: assets/images/profile1.jpg
+#        twitter: 
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
 width: normal
 
-# if you do/don't need pagination, toggle 'enabled' between true/false below
-pagination:
-  enabled: false
-  sort_reverse: true # display recent posts first
-  title: ":title" # Changing this will mess up the header display logic
-  per_page: 5
-  permalink: "/:num/" # pagination link that will be appended
-
-# if you don't need projects, comment the *projects* configs below
-projects: true
+# if you don't need pagination, comment the *paginate* configs below
+# paginate: 5
+# paginate_path: "blog/:num/"
 
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+
+# if you don't need projects, comment the *projects* configs below
+projects: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
@@ -96,7 +88,7 @@ show-tags: true
 related: true
 
 # Display links for next and previous posts for the specified categories
-post-advance-links: [blog]
+post-advance-links: [blog, projects]
 
 # show author block at the end of a post ?
 show-author: true
@@ -104,15 +96,12 @@ show-author: true
 # do you want some animations?
 animation: true
 
-# add default values to specific pages or layouts
-defaults:
-  - scope:
-      path: "" # an empty string here means all files in the project
-      layout: "post"
-    values:
-      # setting all post to not hidden by default,
-      # can be overridden in the front matter for a specific post
-      hidden: false
+#markdown: kramdown
+#highlighter: rouge
+
+#sass:
+#    sass_dir: _sass
+#    style: :compressed
 
 plugins:
   - jekyll-seo-tag
@@ -120,24 +109,6 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-admin
-  - jekyll-paginate-v2
 
 jekyll-mentions:
-  base_url: https://github.com
-
-compress_html:
-  ignore:
-    envs:
-      - development
-      - stage
-
-exclude:
-  [
-    "travis.sh",
-    "README.md",
-    "Gemfile",
-    "Gemfile.lock",
-    "FAQ.md",
-    "node_modules",
-    "vendor",
-  ]
+    base_url: https://github.com
