--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ bio: "We are all star stuff"
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: 'assets/images/profile1.jpg'
+picture: 'assets/images/profile.jpg'
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -59,7 +59,7 @@ linkedin: xingyue-huo
 #        name: Xingyue Huo
 #        bio: 
 #        external-image: false
-#        picture: assets/images/profile1.jpg
+#        picture: assets/images/profile.jpg
 #        twitter: 
 
 # do you want a larger site? change the option below
