--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ width: normal
 
 # if you don't need "about" or "blog", comment them out below
 about: true
-blog: true
+#blog: true
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
@@ -88,7 +88,8 @@ show-tags: true
 related: true
 
 # Display links for next and previous posts for the specified categories
-post-advance-links: [blog, projects]
+#post-advance-links: [blog, projects]
+post-advance-links: [projects]
 
 # show author block at the end of a post ?
 show-author: true
