--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Xingyue Huo
-bio:  "We are all star stuff" '
+bio: ' "We are all star stuff" '
 
 # twitter summary info
 #description: Carolina girl doing biostats at Harvard
