--- a/_config.yml
+++ b/_config.yml
@@ -111,5 +111,5 @@ plugins:
   - jemoji
   - jekyll-admin
 
-jekyll-mentions:
-    base_url: https://github.com
+#jekyll-mentions:
+#    base_url: https://github.com
