--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ email: huoxingyue14@gmail.com
 #scholar: 
 #github: 
 linkedin: xingyue-huo
-#instagram: 
+instagram: hishing_
 #facebook: 
 # twitter: mytwitter
 # google: mygoogle
