--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Xingyue Huo
-bio: ' "Biostatistician" '
+bio: ' Biostatistician|Star Chaser'
 
 # twitter summary info
 #description: Carolina girl doing biostats at Harvard
